2024-01-27T16:06:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7679708510 # 62
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 4 23
* notice: prev accum: outdated-unq outdated-all / unq all: 311 655 / 325 677
* notice: next accum: outdated-unq outdated-all / unq all: 311 655 / 325 678
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-27]

2024-01-27T08:07:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7677358217 # 61
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 4 22
* notice: prev accum: outdated-unq outdated-all / unq all: 311 655 / 324 676
* notice: next accum: outdated-unq outdated-all / unq all: 311 655 / 325 677
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-27]

2024-01-26T16:07:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7670479792 # 59
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 4 21
* notice: prev accum: outdated-unq outdated-all / unq all: 309 653 / 324 675
* notice: next accum: outdated-unq outdated-all / unq all: 311 655 / 324 676
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-12] / [2024-01-26]

2024-01-26T08:08:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7665485294 # 58