@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-27T16:06:31Z",
+  "timestamp" : "2024-01-28T08:08:21Z",
   "count_outdated" : 655,
   "uniques_outdated" : 311,
-  "count" : 678,
-  "uniques" : 325,
+  "count" : 679,
+  "uniques" : 326,
   "clones" : [
     {
       "timestamp": "2024-01-17T00:00:00Z",
@@ -100,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
