@@ -1,3 +1,12 @@
+2024-01-28T08:08:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7684411638 # 64
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-28
+* notice: last 14d: unq all: 4 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 311 655 / 325 678
+* notice: next accum: outdated-unq outdated-all / unq all: 311 655 / 326 679
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-28]
+
 2024-01-27T16:06:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7679708510 # 62
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
